--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -69,6 +69,6 @@ jobs:
       with:
         platforms: linux/amd64,linux/arm64
         context: .
-        push: true
+        push: ${{ github.event_name == 'release' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
