update modules; cleanup

--- a/crds/operator.kyma-project.io_clustersecretoperators.yaml
+++ b/crds/operator.kyma-project.io_clustersecretoperators.yaml
@@ -26,7 +26,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: ClusterSecretOperator is the Schema for the clustersecretoperators
-          API
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -41,11 +41,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: ClusterSecretOperatorSpec defines the desired state of ClusterSecretOperator
+            description: ClusterSecretOperatorSpec defines the desired state of ClusterSecretOperator.
             properties:
               controller:
                 description: ControllerSpec defines the desired state of the controller
-                  deployment
+                  deployment.
                 properties:
                   affinity:
                     description: Affinity is a group of affinity scheduling rules.
@@ -1577,7 +1577,7 @@ spec:
                 type: string
               webhook:
                 description: WebhookSpec defines the desired state of the webhook
-                  deployment
+                  deployment.
                 properties:
                   affinity:
                     description: Affinity is a group of affinity scheduling rules.
@@ -3108,7 +3108,7 @@ spec:
             default:
               observedGeneration: -1
             description: ClusterSecretOperatorStatus defines the observed state of
-              ClusterSecretOperator
+              ClusterSecretOperator.
             properties:
               appliedGeneration:
                 format: int64
