--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,10 @@
-name: Release
+name: Trigger release
 
 on:
   workflow_dispatch:
     inputs:
       version-bump:
         description: 'Whether to bump major, minor or patch version'
-        # For exmaple:
-          # Bump major version (i.e. current_version=v1.2.3 --> new_version=v2.0.0)'
-          # Bump minor version (i.e. current_version=v1.2.3 --> new_version=v1.3.0)
-          # Bump patch version (i.e. current_version=v1.2.3 --> new_version=v1.2.4)
         required: false
         default: patch
         type: choice
@@ -17,65 +13,160 @@ on:
         - minor
         - patch
       desired-version:
-        description: 'Version to be released'
+        description: 'Version to be released; if specified, version-bump will be ignored'
         required: false
         default: ''
-      ref:
-        description: 'The branch, tag, or SHA to release'
-        required: false
-        default: 'main'
+
+concurrency: trigger-release
+
+env:
+  TAG_PREFIX: v
+  INITIAL_TAG: v0.1.0
+  SEMVER_VERSION: 3.4.0
+  HELM_DOCS_VERSION: v1.11.0
+  CHART_DIRECTORY: chart
 
 defaults:
   run:
     shell: bash
 
-env:
-  REGISTRY: ghcr.io
-
 jobs:
   release:
-    name: Create release
+    name: Trigger release
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
-    runs-on: ubuntu-22.04
+
+    # TODO: ensure that github.ref is not refs/tags/*
+    # TODO: maybe even ensure that github.ref == refs/heads/main
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v3
       with:
         token: ${{ secrets.WORKFLOW_USER_GH_TOKEN }}
 
-    - name: Get latest tag
-      uses: actions-ecosystem/action-get-latest-tag@v1
-      if: inputs.desired-version == ''
-      id: get-latest-tag
+    - name: Setup semver
+      uses: ./.github/actions/setup-semver
       with:
-        semver_only: true
-        initial_version: 'v0.0.0'
+        version: ${{ env.SEMVER_VERSION }}
+        install-directory: ${{ runner.temp }}/bin
 
-    - name: Bump version
-      uses: actions-ecosystem/action-bump-semver@v1
-      if: inputs.desired-version == ''
-      id: bump-semver
+    - name: Setup helm-docs
+      uses: ./.github/actions/setup-helm-docs
       with:
-        current_version: ${{ steps.get-latest-tag.outputs.tag }}
-        level: ${{ inputs.version-bump }}
+        version: ${{ env.HELM_DOCS_VERSION }}
+        install-directory: ${{ runner.temp }}/bin
 
-    - name: Prepare version
-      id: prepare_version
+    - name: Determine current release
+      id: get_current_release
+      uses: ./.github/actions/get-highest-tag
+      with:
+        prefix: ${{ env.TAG_PREFIX }}
+
+    - name: Determine target release
+      id: get_target_release
       run: |
-        if "${{ inputs.desired-version != '' }}"
-        then
-          echo "version=${{ inputs.desired-version }}" >> $GITHUB_OUTPUT
+        desired_version=${{ inputs.desired-version }}
+        current_version=${{ steps.get_current_release.outputs.version }}
+        version_bump=${{ inputs.version-bump }}
+
+        if [ -z "$desired_version" ]; then
+          case $version_bump in
+            major|minor|patch)
+              # ok
+              ;;
+            *)
+              >&1 echo "Invalid input: version-bump ($version_bump)."
+              exit 1
+          esac
+          if [ -z "$current_version" ]; then
+            version=${INITIAL_TAG/#$TAG_PREFIX/}
+            tag=$INITIAL_TAG
+          else
+            version=$(semver bump $version_bump $current_version)
+            tag=$TAG_PREFIX$version
+          fi
         else
-          echo "version=${{ steps.bump-semver.outputs.new_version }}" >> $GITHUB_OUTPUT
-        fi 
+          if [[ $desired_version =~ ^$TAG_PREFIX([0-9].*)$ ]]; then
+            version=${BASH_REMATCH[1]}
+            tag=$desired_version
+          else
+            >&1 echo "Invalid input: desired-version ($desired_version) should start with $TAG_PREFIX."
+            exit 1
+          fi
+          if [ "$(semver validate $version)" != valid ]; then
+            >&1 echo "Invalid input: desired-version ($version) is not a valid semantic version."
+            exit 1
+          fi
+          if [ "$(semver compare $version $current_version)" -le 0 ]; then
+            >&1 echo "Invalid input: desired-version ($version) should be higher than current version ($current_version)."
+            exit 1
+          fi
+        fi
+
+        echo "Target version: $version"
+        echo "Target tag: $tag"
+        echo "version=$version" >> $GITHUB_OUTPUT
+        echo "tag=$tag" >> $GITHUB_OUTPUT
+
+      # TODO: if this job fails after the following step (resp. after the following step has any pushed commits),
+      # a re-run of the job will fail in the following step, because it will try to make pushes to the triggering sha
+      # which is no longer the head; this should be caught/improved.
+    - name: Update chart version/appVersion and chart docs
+      run: |
+        current_chart_version=$(yq .version $CHART_DIRECTORY/Chart.yaml)
+        current_app_version=$(yq .appVersion $CHART_DIRECTORY/Chart.yaml)
+        target_chart_version=${{ steps.get_target_release.outputs.version }}
+        target_app_version=${{ steps.get_target_release.outputs.tag }}
+
+        echo "Updating $CHART_DIRECTORY/Chart.yaml from $current_chart_version to $target_chart_version ..."
+        perl -pi -e "s#^version:.*#version: $target_chart_version#g" $CHART_DIRECTORY/Chart.yaml
+        perl -pi -e "s#^appVersion:.*#appVersion: $target_app_version#g" $CHART_DIRECTORY/Chart.yaml
+
+        if [ -z "$(git status --porcelain)" ]; then
+          echo "Nothing has changed; skipping commit ..."
+        else
+          git config user.name "${{ vars.WORKFLOW_USER_NAME }}"
+          git config user.email "${{ vars.WORKFLOW_USER_EMAIL }}"
+          git add -A
+          git commit -m "Bump chart/app version from $current_chart_version/$current_app_version to $target_chart_version/$target_app_version"
+        fi
+
+        helm-docs -c $CHART_DIRECTORY -s file
+
+        if [ -z "$(git status --porcelain)" ]; then
+          echo "Nothing has changed; skipping commit ..."
+        else
+          git config user.name "${{ vars.WORKFLOW_USER_NAME }}"
+          git config user.email "${{ vars.WORKFLOW_USER_EMAIL }}"
+          git add -A
+          git commit -m "Update chart docs"
+        fi
+
+        git push
+
+    - name: Determine target commit
+      id: get_target_commit
+      run: |
+        sha=$(git rev-parse HEAD)
+        echo "Target commit: $sha"
+        echo "sha=$sha" >> $GITHUB_OUTPUT
+
+    - name: Wait for check suites to complete
+      uses: sap-contributions/await-check-suites@master
+      with:
+        ref: ${{ steps.get_target_commit.outputs.sha }}
+        intervalSeconds: 10
+        timeoutSeconds: 1800
+        failStepIfUnsuccessful: true
+        appSlugFilter: github-actions
+
     - name: Create Release
-      id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ steps.prepare_version.outputs.version }}
+        tag_name: ${{ steps.get_target_release.outputs.tag }}
         draft: false
         prerelease: false
-        target_commitish: ${{ inputs.ref }}
+        target_commitish: ${{ steps.get_target_commit.outputs.sha }}
         token: ${{ secrets.WORKFLOW_USER_GH_TOKEN }}
-        generate_release_notes: true
+        generate_release_notes: false
