--- a/pkg/operator/data/charts/clustersecret-operator/templates/controller-deployment.yaml
+++ b/pkg/operator/data/charts/clustersecret-operator/templates/controller-deployment.yaml
@@ -41,7 +41,7 @@ spec:
       {{- with .Values.controller.topologySpreadConstraints | default .Values.global.topologySpreadConstraints }}
       topologySpreadConstraints:
       {{- range . }}
-      - {{ toYaml . | trim | nindent 8 }}
+      - {{ toYaml . | nindent 8 | trim }}
         {{- if not .labelSelector }}
         labelSelector:
           matchLabels:
