--- a/crds/operator.kyma-project.io_clustersecretoperators.yaml
+++ b/crds/operator.kyma-project.io_clustersecretoperators.yaml
@@ -3265,8 +3265,7 @@ spec:
                       description: Reconcile policy.
                       type: string
                     status:
-                      description: Observed status of the dependent object, as observed
-                        by kstatus.
+                      description: Observed status of the dependent object.
                       type: string
                     updatePolicy:
                       description: Update policy.
