update build logic

--- a/.project
+++ b/.project
@@ -10,7 +10,8 @@ kind: ClusterSecretOperator
 kubernetesVersion: v0.27.2
 mutatingWebhookEnabled: false
 operatorName: clustersecret-operator-cop.cs.sap.com
-owner: SAP SE
+owner: SAP SE or an SAP affiliate company and clustersecret-operator-cop contributors 
 resource: clustersecretoperators
+spdxLicenseHeaders: true
 validatingWebhookEnabled: false
 version: v0.1.4
