adopt component-operator-runtime v0.3.126

--- a/crds/operator.kyma-project.io_clustersecretoperators.yaml
+++ b/crds/operator.kyma-project.io_clustersecretoperators.yaml
@@ -3510,6 +3510,8 @@ spec:
               lastObservedAt:
                 format: date-time
                 type: string
+              lastProcessingDigest:
+                type: string
               observedGeneration:
                 format: int64
                 type: integer
@@ -3518,6 +3520,9 @@ spec:
               processingSince:
                 format: date-time
                 type: string
+              revision:
+                format: int64
+                type: integer
               state:
                 description: Component state. Can be one of 'Ready', 'Pending', 'Processing',
                   'DeletionPending', 'Deleting', 'Error'.
